--- a/assets/css/ShMapperDrive.css
+++ b/assets/css/ShMapperDrive.css
@@ -3,7 +3,6 @@
 	display:inline-flex;
 	align-items:center;
 }
-
 .shm_type_icon, .shm_type_icon2 
 {
 	width: 20px;
@@ -79,6 +78,12 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
+
+.shm-m-0
+{
+	margin:0!important;
+}
+
 .shmd-loader {
 	margin: 5px;
 	animation: spin 1s linear infinite;
